# arc-neuron-llmbuilder-v1.0.0

./: .gitignore  AI_BRIEFING_FOR_VIBE_CODERS.patch  APPLY_NOTES.md  APPLY_ROADMAP_LICENSE_LANGUAGE.sh  ARCHITECTURE.md  ARC_NEURON_SUBMISSION_ROUTES.md  BRANCH_PROTECTION_FUNDING_FLOW.patch  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  ECOSYSTEM.md  EXAMPLES.md  FAQ.md  GLOSSARY.md  GOVERNANCE_DOCTRINE.md  MODEL_CARD_v6_conversation.md  Makefile  PROOF.md  QUICKSTART.md  README.md  README_BRANCH_BMC_FLOW.patch  README_protosynth_integration.patch  README_roadmap_license_language.patch  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  SECURITY.md  STORAGE_ECONOMICS.md  SUPPORT.md  SYSTEM_STACK_MANIFEST.json  USAGE.md  _config.yml  cognition_lab.py  docker-compose.local-backends.yml  index.md  pyproject.toml  quantization_retention_seed_tasks.jsonl  reasoning_seed_tasks.jsonl  (+2 more)
ecosystem/arc-language-module/: FINAL_PRODUCTION_COMPLETION_REPORT_v026.md  FINAL_PRODUCTION_READINESS_REPORT_v027.md  PRODUCTION_PASS_REPORT_v025.md  README.md  pyproject.toml
ecosystem/arc-language-module/config/: backend_manifests.json  common_etymologies_seed.json  common_languages_seed.json  common_phrases_seed.json  concepts_seed.json  corpus_manifests.json  phonology_seed.json  pronunciation_seed.json  source_manifests.json  transliteration_seed.json  variants_seed.json
ecosystem/arc-language-module/docs/: ADVANCED_ANALYSIS_AND_PRONUNCIATION.md  ARCHITECTURE.md  ARC_CORE_REUSE_AUDIT.md  BACKEND_ADAPTERS.md  BACKEND_DIAGNOSTICS.md  COMPETITOR_COMPARISON.md  COMPREHENSIVE_GROWTH_SURFACES.md  GOVERNANCE_WORKFLOW.md  IMPLEMENTATION_MANIFESTS_AND_PHONOLOGY.md  INGESTION_PLAN.md  LANGUAGE_ONBOARDING.md  LOCAL_ARGOS_OPTIONALITY.md  PACKAGE_LIFECYCLE.md  POLICY_AND_EVIDENCE.md  PRODUCTION_HARDENING_v025.md  PROVIDER_ACTIONS.md  PROVIDER_RUNTIME_AUDIT.md  RUNTIME_ORCHESTRATION.md  SELF_FILL_APPROVED_IMPORTERS.md  SELF_FILL_AUTHORITY_ARBITRATION.md  SELF_FILL_RELEASE_PIPELINE.md  SELF_FILL_REPLAY_AND_COMPACTION.md  SELF_FILL_RETENTION_POLICY.md  SELF_FILL_SYSTEM.md  SEMANTIC_CONCEPTS_VARIANTS_AND_COVERAGE.md  SPEECH_OPTIONALITY.md  TRANSLITERATION_PROFILES_AND_READINESS.md  approved_self_fill_bootstrap_report.json  self_fill_arbitration_bootstrap_report.json  self_fill_bootstrap_report.json  self_fill_release_bootstrap_report.json  self_fill_replay_compaction_bootstrap_report.json  self_fill_scheduled_release_bootstrap_report.json  self_fill_scheduled_release_report.json  sfr_2662c8e5a57a.release_report.json  sfr_32b97fc83439.release_report.json  sfr_32d0430d1fdf.release_report.json  sfr_32e549f7fe7d.release_report.json  sfr_46cae89dccae.release_report.json  sfr_81f136facfb8.release_report.json  (+15 more)
ecosystem/arc-language-module/examples/: cldr_sample.json  glottolog_sample.csv  iso6393_sample.csv  language_submission_example.json  tmp_submission.json
ecosystem/arc-language-module/scripts/: run_approved_self_fill_bootstrap.py  run_recurring_self_fill_release.py  run_scheduled_self_fill_release.py  run_self_fill_arbitration_bootstrap.py  run_self_fill_bootstrap.py  run_self_fill_replay_compaction_bootstrap.py
ecosystem/arc-language-module/sql/: 001_init.sql  002_indexes.sql  003_self_fill.sql  004_self_fill_sources.sql  005_self_fill_arbitration.sql  006_self_fill_release_pipeline.sql  007_self_fill_retention_policy.sql  008_self_fill_replay_compaction.sql
ecosystem/arc-language-module/tests/: test_aliases_relationships_batch.py  test_api_integration.py  test_arbitration.py  test_backend_diagnostics.py  test_governance.py  test_importers.py  test_onboarding.py  test_package_lifecycle.py  test_policy_and_evidence.py  test_pronunciation_analysis.py  test_provider_actions.py  test_provider_runtime_audit.py  test_runtime_orchestration.py  test_self_fill_arbitration.py  test_self_fill_release.py  test_self_fill_replay.py  test_self_fill_retention.py  test_self_fill_sources.py  test_smoke.py  test_translation_backends.py  test_transliteration_profiles.py  test_v22_growth_surfaces.py  test_v23_manifests_and_phonology.py  test_v24_acquisition_workspace.py  test_v25_hardening.py  test_v26_bug_fixes.py  test_v27_completeness.py  test_v28_final.py  test_v29_phrase_concepts_complete.py  test_v30_final_complete.py  test_v31_session10_complete.py  test_v32_session11_complete.py  test_v33_session12_complete.py  test_v34_production_hardening.py  test_v35_release_integrity.py  test_v36_seed_and_release_contracts.py
ecosystem/arc-rar/: Cargo.toml  LICENSE  README.md
ecosystem/arc-rar/docs/: architecture.md  autowrap-intent-validation.md  cli-spec.md  completion-checklist.md  comprehensive-production-audit.md  custom-os-porting.md  discoverability-and-seo.md  ffi-bridge.md  final-what-remains.md  gui-control-spec.md  gui-daemon-bridge.md  implemented-vs-planned.md  ipc-spec.md  next-steps-darpa.md  packaging-and-release.md  production-readiness.md  setup-and-dependencies.md  support-matrix.md  symlinks-and-shell-integration.md
ecosystem/arc-rar/scripts/: bootstrap_linux.sh  bootstrap_macos.sh  bootstrap_windows.ps1  dev_env_python.sh  generate_fixture_plan.sh  install_symlink_unix.sh  smoke_test_matrix.sh
ecosystem/arc-rar/testdata/: README.md
ecosystem/cleanroom-runtime/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  bench_smoke.txt  pyproject.toml  smoke_trace.html
ecosystem/cleanroom-runtime/docs/: IMPLEMENTATION_MATRIX.md  INDEX.md  RELEASE_CHECKLIST.md  REPO_SEO.md  SOAK.md  architecture.md  benchmarks.md  bluetooth_bridge.md  doctrine.md  geo_overlay.md  llamafile_flow.md  memory_retention.md  migration_plan.md  perception_adapters_implementation.md  production_readiness.md  proto_agi_integration.md  public_direction.md  runtime_modularization.md  source_comparison.md  spatial_truth.md  token_counting.md  v0_4_upgrade_notes.md  v0_5_upgrade_notes.md  v0_6_upgrade_notes.md  v0_7_upgrade_notes.md  v0_8_upgrade_notes.md  v0_9_upgrade_notes.md  v1_0_upgrade_notes.md  v1_1_upgrade_notes.md  v1_2_upgrade_notes.md  v1_3_upgrade_notes.md  (+19 more)
(+1084 files in other folders)
