[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-neuron-llmbuilder"
version = "1.0.0"
description = "A governed local AI build-and-memory system — Gate v2 promotion, OBIN v2 indexed ledger, Arc-RAR restorable archives, canonical conversation pipeline, draft-critique-revise reflection, and automatic terminology absorption."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gary Doman" }]
keywords = [
  "local-ai",
  "governed-ai",
  "llm-builder",
  "promotion-gate",
  "regression-floor",
  "omnibinary",
  "arc-rar",
  "gguf",
  "conversation-pipeline",
  "reflection-loop",
  "terminology-absorption",
  "agentic-ai",
  "on-prem-ai",
  "sovereign-ai",
  "small-language-models",
  "transformer",
  "pytorch",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
training = ["torch>=2.0", "numpy<3.0"]

[project.urls]
Homepage = "https://github.com/GareBear99/ARC-Neuron-LLMBuilder"
Documentation = "https://garebear99.github.io/ARC-Neuron-LLMBuilder/"
Repository = "https://github.com/GareBear99/ARC-Neuron-LLMBuilder"
Issues = "https://github.com/GareBear99/ARC-Neuron-LLMBuilder/issues"
Discussions = "https://github.com/GareBear99/ARC-Neuron-LLMBuilder/discussions"
Changelog = "https://github.com/GareBear99/ARC-Neuron-LLMBuilder/blob/main/CHANGELOG.md"
Sponsor = "https://github.com/sponsors/GareBear99"

[project.scripts]
arc-lab = "cognition_lab:main"
arc-floor = "runtime.floor_model:main"
arc-terminology = "runtime.terminology:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
  "arc_core*",
  "arc_tiny*",
  "arc_neuron_small*",
  "arc_neuron_tokenizer*",
  "adapters*",
  "runtime*",
  "scorers*",
]
exclude = [
  "tests*",
  "ecosystem*",
  "docs*",
  "benchmarks*",
  "datasets*",
  "artifacts*",
  "exports*",
  "results*",
  "reports*",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
