[package]
name = "arc-rar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
arc-rar-common = { path = "../arc-rar-common" }
arc-rar-core = { path = "../arc-rar-core" }
arc-rar-ipc = { path = "../arc-rar-ipc" }
arc-rar-automation = { path = "../arc-rar-automation" }
uuid.workspace = true
