[package]
name = "arc-rar-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
arc-rar-common = { path = "../arc-rar-common" }
arc-rar-core = { path = "../arc-rar-core" }
serde_json.workspace = true
